--- a/src/mixins/_responsive-property.scss
+++ b/src/mixins/_responsive-property.scss
@@ -30,11 +30,7 @@
 
 		@each $breakpoint, $value in $values {
 
-			$spacing-value: get-spacing($value);
-
-			@if $spacing-value != false {
-				$value: $spacing-value;
-			}
+			$value: get-spacing($value);
 
 			@if $negative {
 
